--- a/installk_manager/src/main/AndroidManifest.xml
+++ b/installk_manager/src/main/AndroidManifest.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <!--/////////////////////////////////////////////////////////////////////////-->
+    <!--应用-->
+    <!--/////////////////////////////////////////////////////////////////////////-->
+
+    <uses-permission
+        android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 </manifest>
