--- a/installk_builder_test/build.gradle
+++ b/installk_builder_test/build.gradle
@@ -39,7 +39,7 @@ android {
 dependencies {
 
     implementation project(':SwiftKit:basick')
-    implementation project(':SwiftKit:uicorek')
+    implementation project(':SwiftKit:xmlk')
     implementation project(':installk_builder')
 
     testImplementation 'junit:junit:4.13.2'
