--- a/settings.gradle
+++ b/settings.gradle
@@ -23,9 +23,13 @@ include ':app'
 include ':installk_manager'
 include ':installk_builder'
 include ':installk_builder_test'
+include ':installk_xapk'
 //SwiftKit
 include ':SwiftKit'
 project(':SwiftKit').projectDir = new File("D:\\WorkSpace\\GitHub\\SwiftKit")
 include ':SwiftKit:basick'
 include ':SwiftKit:xmlk'
-
+//AIOKit
+include ':AIOKit'
+project(':AIOKit').projectDir = new File("D:\\WorkSpace\\GitHub\\AIOKit")
+include ':AIOKit:iok_ztzip'
