--- a/installk_xapk/src/main/AndroidManifest.xml
+++ b/installk_xapk/src/main/AndroidManifest.xml
@@ -2,4 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+
+<application>
+    <activity android:name=".InstallKXapkActivity"
+        android:launchMode="singleTop"/>
+</application>
 </manifest>
