--- a/installk_splits_ackpine/build.gradle
+++ b/installk_splits_ackpine/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 //    api "ru.solrudev.ackpine:ackpine-ktx:0.6.1"
     api project(':AInstallKit_Ackpine:ackpine-splits')
     api project(':AInstallKit_Ackpine:ackpine-ktx')
-    implementation project(':SwiftKit:basick')
+    implementation project(':ASwiftKit:basick')
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
