--- a/installk_splits_ackpine_test/build.gradle
+++ b/installk_splits_ackpine_test/build.gradle
@@ -36,7 +36,7 @@ android {
 }
 
 dependencies {
-    implementation project(':SwiftKit:basick')
+    implementation project(':ASwiftKit:basick')
     implementation project(':installk_splits_ackpine')
     implementation project(':AManifestKit_XXPermissions:manifestk_xxpermissions')
 
