--- a/installk_xapk/build.gradle
+++ b/installk_xapk/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-    implementation project(':SwiftKit:basick')
+    implementation project(':ASwiftKit:basick')
     implementation project(':AIOKit:iok_ztzip')
 
     testImplementation 'junit:junit:4.13.2'
