--- a/xapk/build.gradle
+++ b/xapk/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-    implementation project(':ASwiftKit:bindk')
+    implementation project(':ASwiftKit:uik:databinding')
     implementation project(':AZipKit:ztzip')
 
     testImplementation 'junit:junit:4.13.2'
